# misra_C_agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_analysis_pipeline.py  0003_violations_and_rules.py  0004_review_workflow.py  0005_enterprise.py
backend/scripts/: export_openapi.py  generate_grpc.py
backend/src/misra_platform/: __init__.py  main.py
backend/src/misra_platform/api/middleware/: __init__.py  auth.py  correlation_id.py  rate_limit.py
backend/src/misra_platform/api/v1/: analysis.py  bulk_review.py  cfg.py  compliance.py  exports.py  health.py  integrations.py  metrics.py  observability.py  reviews.py  router.py  rules.py  teams.py  violations.py
backend/src/misra_platform/core/: __init__.py  config.py  dependencies.py  enums.py  events.py  exceptions.py  logging.py  security.py
backend/src/misra_platform/domain/enums/: analysis_status.py  review_action.py  violation_status.py
backend/src/misra_platform/domain/models/: __init__.py  analysis.py  enterprise.py  review.py  violations.py
backend/src/misra_platform/integrations/clang_bridge/: __init__.py  ast_client.py  compile_commands.py  compile_db_parser.py  incremental_index.py
backend/src/misra_platform/integrations/enterprise/: __init__.py  github_annotations.py  gitlab_annotations.py  jira_client.py  pr_comments.py  reviewer_assignment.py  sarif_exporter.py
backend/src/misra_platform/integrations/redis/: cache.py
backend/src/misra_platform/integrations/storage/: local.py
backend/src/misra_platform/observability/: __init__.py  metrics.py  tracing.py
backend/src/misra_platform/repositories/: base.py  enterprise_repo.py  review_repo.py  violation_repo.py
backend/src/misra_platform/schemas/requests/: enterprise.py
backend/src/misra_platform/schemas/responses/: analysis.py  (+5 more)
backend/src/misra_platform/services/: analysis_orchestrator.py  bulk_review_service.py  cfg_service.py  compliance_analytics_service.py  export_service.py  integration_service.py  metrics_service.py  patch_engine.py  review_service.py  rule_catalog_service.py  rule_dispatcher.py  source_file_service.py  toolchain_profile_service.py
backend/tests/: conftest.py
backend/tests/unit/: test_analysis_api.py  test_cfg_api.py  test_compile_commands.py  test_enterprise_integrations.py  test_health.py  test_observability.py  test_review_workflow.py  test_rules_api.py
clang-worker/: CMakeLists.txt
clang-worker/include/misra_clang/: ast_serializer.h  clang_analysis_service.h  health_service.h  preprocessor_tracker.h  toolchain_profile.h  translation_unit_loader.h
clang-worker/proto/: clang_analysis.proto
clang-worker/src/: ast_serializer.cpp  clang_analysis_service.cpp  health_service.cpp  main.cpp  preprocessor_tracker.cpp  toolchain_profile.cpp  translation_unit_loader.cpp
rule-engine/: pyproject.toml
rule-engine/reports/: analyzer_reuse.json  cache_report.json  reuse_report.json  rule_enablement.json  top_analyzer_costs.json
rule-engine/src/misra_platform_rules/: __init__.py  alias_analysis_statistics.py  analysis_cache.py  analyzer_efficiency.py  analyzer_reuse.py  ast_graph.py  base_rule.py  confidence.py  conformance.py  coverage_matrix.py  engine.py  enums.py  execution_planner.py  fingerprint.py  metadata_gap_analysis.py  registry.py  rule_base.py  rule_batch_planner.py  rule_capability_matrix.py  rule_context.py  rule_enablement.py  rule_result.py  taxonomy.py  type_system_statistics.py  worker_pool.py
rule-engine/src/misra_platform_rules/analyzers/: __init__.py  alias_analyzer.py  cast_analyzer.py  cfg_builder.py  cfg_engine.py  dataflow_engine.py  dataflow_engine_v2.py  essential_type_analyzer.py  essential_type_engine.py  expression_classifier.py  linkage_analyzer.py  linkage_index.py  macro_analyzer.py  pointer_analyzer.py  qualifier_analyzer.py  symbol_index.py
rule-engine/tests/: test_alias_analysis_statistics.py  test_alias_analyzer.py  test_analysis_cache.py  test_analyzer_efficiency_reports.py  test_analyzers.py  test_cfg_engine.py  test_dataflow_v2.py  test_essential_type_engine.py  test_execution_planner.py  test_linkage_analyzer.py  test_metadata_gap_analysis.py  test_rule_batch_planner.py  test_rule_capability_matrix.py  test_rule_engine.py  test_type_system_statistics.py
rule-engine/tests/conformance/: ast_builders.py  conformance_report.json  embedded_corpora.py  embedded_corpus_report.json  fixtures.py  fixtures_phase6.py  fixtures_phase62.py  fixtures_phase63.py  fixtures_phase64.py  fixtures_phase65.py  fixtures_phase71.py  test_conformance.py  test_embedded_corpora.py  test_rule_enablement_and_reuse.py
rule-engine/tests/performance/: benchmark_rule_engine.py  performance_report.json  synthetic_project.py  test_performance.py
(+168 files in other folders)
