[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misra-platform"
version = "1.0.0-rc1"
description = "MISRA C Compliance Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "grpcio>=1.68.0",
    "grpcio-health-checking>=1.68.0",
    "protobuf>=5.29.0",
    "structlog>=24.4.0",
    "python-json-logger>=3.2.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "grpcio-tools>=1.68.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/misra_platform"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/misra_platform/integrations/clang_bridge/generated/*" = ["E501", "F401", "I001"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
