[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misra-platform-rules"
version = "0.1.0"
description = "MISRA C rule plugin engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/misra_platform_rules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
